# contract-review-env

./: .gitignore  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  scenarios.py
server/: Dockerfile  __init__.py  app.py  contract_review_environment.py  requirements.txt
tests/: test_environment.py  test_graders.py
